managing power-profiles-daemon

--- a/dotfiles/.config/waybar/style.css
+++ b/dotfiles/.config/waybar/style.css
@@ -28,6 +28,7 @@ menu {
 /* - Genera rules for visible modules -- */
 #custom-archicon,
 #clock,
+#power-profiles-daemon,
 #cpu,
 #custom-gpuinfo,
 #memory,
@@ -73,6 +74,10 @@ menu {
   color: #89B4FA;
   background: #161320;
   padding-right: 17px;
+}
+
+#power-profiles-daemon{
+  background: #A6E3A1;
 }
 
 #clock {
