Update power profiles daemon styles and tooltip format in waybar configuration

--- a/dotfiles/.config/waybar/style.css
+++ b/dotfiles/.config/waybar/style.css
@@ -76,8 +76,21 @@ menu {
   padding-right: 17px;
 }
 
-#power-profiles-daemon{
-  background: #A6E3A1;
+#power-profiles-daemon.performance {
+  background: #E06C75;
+}
+
+#power-profiles-daemon.balanced {
+  background: #E5C07B;
+}
+
+#power-profiles-daemon.power-saver {
+  background: #98C379;
+}
+
+/* fallback / default */
+#power-profiles-daemon {
+  background: #3E4452;
 }
 
 #clock {
