--- a/dotfiles/.config/waybar/style.css
+++ b/dotfiles/.config/waybar/style.css
@@ -30,6 +30,7 @@ menu {
 #custom-archicon,
 #clock,
 #power-profiles-daemon,
+#custom-hardware-collapse,
 #cpu,
 #custom-gpuinfo,
 #memory,
@@ -51,6 +52,7 @@ menu {
 
 /* Separation to the left */
 #custom-archicon,
+#custom-hardware-collapse,
 #cpu,
 #idle_inhibitor {
   margin-left: 5px;
@@ -60,6 +62,7 @@ menu {
 
 /* Separation to the rigth */
 #clock,
+#custom-hardware-collapse,
 #temperature,
 #language {
   margin-right: 5px;
@@ -96,6 +99,10 @@ menu {
 
 #clock {
   background: #ABE9B3;
+}
+
+#custom-hardware-collapse {
+  background: #F3F0A8;
 }
 
 #cpu {
